--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.9",
     "expo-modules-autolinking": "~2.0.0",
+    "expo-print": "^14.0.3",
     "expo-router": "~4.0.19",
+    "expo-screen-capture": "^7.0.1",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -47,6 +50,7 @@
     "react-native": "0.76.8",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-html-to-pdf-lite": "^0.11.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
